<resources>
    <string name="app_name">Stack Overgol</string>
    <string name="splash_tv_title">Stack</string>
    <string name="splash_tv_sub_title">Overgol</string>
    <string name="splash_iv_app_icon_cd">Splash Activity Logo</string>
    <string name="sog_login_et_email">Email</string>
    <string name="sog_login_id_logo">app logo</string>
    <string name="sog_login_et_password">Password</string>
    <string name="sog_login_bt_login">Login</string>
    <string name="login_error_title">Error!</string>
    <string name="login_error_message">Login failed</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="title_activity_main_screen">MainScreen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Logout</string>
    <string name="admin">Administrador</string>
    <string name="matches">Matches</string>
    <string name="finances">Finances</string>
    <string name="monthly">Monthly</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_matches">Nenhuma partida cadastrada</string>
    <string name="no_players">Nenhum jogador cadastrada</string>
    <string name="history">History</string>
    <string name="match_of_the_week">Match of the week</string>
    <string name="sog_no_acc_text">Você não possui uma conta no StackOvergol</string>
    <string name="permission_needed">Permissão Necessária</string>
    <string name="leave">Sair</string>
    <string name="ask_permission">O StackOvergol precisa do seu ID do Telegram para verificar se você participa do grupo</string>
</resources>
