<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/stackOvergolBackGround"
    tools:context="com.github.brunomb.stackovergol.SplashActivity"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/splash_iv_app_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/splash_iv_app_icon_cd" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/splash_tv_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="italic"
            android:textColor="@color/splashTittleColor"
            android:text="@string/splash_tv_title" />

        <TextView
            android:id="@+id/splash_tv_tittle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:textColor="@color/splashTittleColor"
            android:text="@string/splash_tv_sub_title" />

    </LinearLayout>

</LinearLayout>
